# AndroidRustCVCam

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/os/androidrusttemplate/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/os/androidrustcvcam/: MainActivity.kt
app/src/main/java/com/os/androidrustcvcam/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/os/androidrustcvcam/: ExampleUnitTest.kt
gradle/: libs.versions.toml
rustlib/: .gitignore  Cargo.toml  build-linux.sh  build_opencv_release.sh  cvEmulatorBuild.sh  linux-build.sh  macos-build.sh  macos-cvEmulatorBuild.sh  opencv-rust-build-linux.sh
rustlib/src/: lib.rs
