[package]
name = "rustlib"
version = "0.1.0"
edition = "2021"


[dependencies]
log = "0.4.20"
jni = "0.21.1"
opencv = { version = "0.84.5", default-features = false, features = ["imgproc", "features2d", "highgui", "photo", "video"]}


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"


[lib]
crate-type = ["cdylib"]
name = "rustlib"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
